# board2pdf

./: .gitignore  DEPLOY.md  DEVELOPMENT.md  README.md  __init__.py  board2pdf-cli.py  board2pdf_action.py  default_config.ini  kiplotpcb_action.py  kiplotpdf_action.py  persistence.py  plot.py  pyproject.toml  settings_dialog.fbp
PyPDF4/: filters.py  generic.py  pdf.py
dialog/: dialog_base.py  settings_dialog.py
plugin/: README.md  build-deploy.md  install_and_launch.py  tests.py
plugin/pcm/: build.py  metadata.json  metadata_template.json
plugin/src/: board2pdf.config.ini  board2pdf_action.py  cli.py  persistence.py  plot.py  pypdf  settings_dialog.fbp
plugin/src/dialog/: __init__.py  dialog_base.py  settings_dialog.py
pypdf/: _utils.py  _xobj_image_helpers.py  types.py
pypdf/annotations/: _markup_annotations.py
src/: board2pdf_action.py  cli.py  default_config.ini  pdf_utils.py  persistence.py  plot.py  plugin.json  requirements.txt  utils.py
src/board2pdf/: board2pdf.config.ini  cli.py  default_config.ini  persistence.py  plot.py
src/board2pdf/pypdf/: _encryption.py  _utils.py  _xobj_image_helpers.py  types.py
src/board2pdf/pypdf/_crypt_providers/: __init__.py  _cryptography.py  _fallback.py  _pycryptodome.py
src/board2pdf/pypdf/annotations/: _markup_annotations.py
src/board2pdf/pypdf/generic/: _base.py  _data_structures.py
src/dialog/: dialog_base.py  settings_dialog.fbp  settings_dialog.py
src/drawing_sheet/: template.kicad_wks
