[project]
name = "board2pdf"
version = "1.9.1"
description='KiCAD Gerber PDF Generator'
authors = [{name = "Albin Dennevi"}]
license = {text = "GNU GPLv3"}
readme = "README.md"

requires-python = ">=3.6"
keywords = ["kicad", "pdf", "pcb", "electronics"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "kicad-python>=0.2.0",
  "PyMuPDF>=1.25.2",
  "pypdf>=5.1.0"
]

[project.urls]
repository='https://gitlab.com/dennevi/Board2Pdf'
url='https://gitlab.com/dennevi/Board2Pdf'

[project.scripts]
board2pdf= "board2pdf.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where=['src']

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools.package-data]
board2pdf= ["*.def", "*.ini"]

[tool.pylint]
max-line-length = 200
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "C0301",
    "W1203",
    "C0209"
]
